no horizontal scrolling and fixed some footer isues for phones

--- a/css/style.css
+++ b/css/style.css
@@ -451,3 +451,7 @@ footer .footer-below {
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
 }
+ 
+html{
+    overflow-x: hidden;
+}
